clean up & rename

--- a/af_benchmark/example-config.yaml
+++ b/af_benchmark/example-config.yaml
@@ -15,6 +15,6 @@ measurements:
     - ram
   report:
     - print
-parallelization:
-  parallelize: true
-  backend: dask-local
+engine:
+  backend: sequential
+  # backend: dask-local
