--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run test config: Uproot + SequentialExecutor
+      - name: Run test config Uproot + SequentialExecutor
         run: python3 af_benchmark/benchmark.py tests/config_uproot_sequential.yaml
 
   uproot_futures:
@@ -37,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run test config: Uproot + FuturesExecutor
+      - name: Run test config Uproot + FuturesExecutor
         run: python3 af_benchmark/benchmark.py tests/config_uproot_futures.yaml
 
   uproot_dask_local:
@@ -54,7 +54,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run test config: Uproot + DaskLocalExecutor
+      - name: Run test config Uproot + DaskLocalExecutor
         run: python3 af_benchmark/benchmark.py tests/config_uproot_dask_local.yaml
 
   nanoevents_sequential:
@@ -71,7 +71,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run test config: NanoEvents + SequentialExecutor
+      - name: Run test config NanoEvents + SequentialExecutor
         run: python3 af_benchmark/benchmark.py tests/config_nanoevents_sequential.yaml
 
   nanoevents_futures:
@@ -88,7 +88,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run test config: NanoEvents + FuturesExecutor
+      - name: Run test config NanoEvents + FuturesExecutor
         run: python3 af_benchmark/benchmark.py tests/config_nanoevents_futures.yaml
 
   nanoevents_dask_local:
@@ -105,7 +105,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run test config: NanoEvents + DaskLocalExecutor
+      - name: Run test config NanoEvents + DaskLocalExecutor
         run: python3 af_benchmark/benchmark.py tests/config_nanoevents_dask_local.yaml
 
 
