--- a/tests/config_nanoevents_futures.yaml
+++ b/tests/config_nanoevents_futures.yaml
@@ -4,7 +4,7 @@ data-access:
   mode: local
   files: 
     - tests/data/nano_dimuon.root
-processing:
+processor:
   method: nanoevents
   columns:
     - event
