--- a/tests/config_uproot_dask_local.yaml
+++ b/tests/config_uproot_dask_local.yaml
@@ -4,7 +4,7 @@ data-access:
   mode: local
   files: 
     - tests/data/nano_dimuon.root
-processing:
+processor:
   method: uproot
   columns:
     - event
