allow to load a given number of columns

--- a/af_benchmark/example-config.yaml
+++ b/af_benchmark/example-config.yaml
@@ -12,10 +12,10 @@ data-access:
 processor:
   method: uproot
   # method: nanoevents
-  columns:
-    - event
-    - Muon_pt
-    - Muon_eta
+  columns: 5
+    # - event
+    # - Muon_pt
+    # - Muon_eta
   operation: sum
   write: false
 measurements:
