--- a/tests/test-dask-local.yaml
+++ b/tests/test-dask-local.yaml
@@ -1,12 +1,11 @@
 executor:
-  backend: futures
+  backend: dask-local
 data-access:
   mode: local
   files: 
     - tests/data/nano_dimuon.root
 processor:
+  parallelize_over: columns
   method: uproot
-  columns:
-    - event
-    - Muon_pt
-  operation: mean
+  columns: 10
+  operation: sum
