--- a/tests/test-read-by-file.yaml
+++ b/tests/test-read-by-file.yaml
@@ -1,12 +1,11 @@
 executor:
-  backend: sequential
+  backend: futures
 data-access:
   mode: local
   files: 
     - tests/data/nano_dimuon.root
 processor:
+  parallelize_over: files
   method: uproot
-  columns:
-    - event
-    - Muon_pt
-  operation: mean
+  columns: 10
+  operation: sum
