--- a/tests/test-read-by-column.yaml
+++ b/tests/test-read-by-column.yaml
@@ -5,6 +5,6 @@ data-access:
   files: 
     - tests/data/nano_dimuon.root
 processor:
-  method: uproot
+  parallelize_over: files
   columns: 10
   operation: sum
