--- a/tests/test-read-from-dir.yaml
+++ b/tests/test-read-from-dir.yaml
@@ -5,7 +5,6 @@ data-access:
   directories: 
     - tests/data/
 processor:
-  parallelize_over: columns
-  method: uproot
+  parallelize_over: files
   columns: 10
   operation: sum
