--- a/af_benchmark/example-configs/example-config-dbs-file.yaml
+++ b/af_benchmark/example-configs/example-config-dbs-file.yaml
@@ -7,6 +7,7 @@ data-access:
 #  xrootdserver: cmsxrootd.hep.wisc.edu:1094
   file: /store/data/Run2016B/SingleMuon/NANOAOD/02Apr2020_ver2-v1/20000/90322FC2-4027-0E47-92E4-22307EC8EAD2.root       
 processor:
-  parallelize_over: files
+  parallelize_over: columns
+#  parallelize_over: files
   columns: 5
   operation: sum
