--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  default:
+  test-data-access:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -20,10 +20,10 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Default test
-        run: python3 af_benchmark/benchmark.py tests/test-default.yaml
+      - name: Run data access tests
+        run: python3 tests/test-data-access.py
 
-  read-from-dir:
+  test-executors:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -38,9 +38,9 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: 
-        run: python3 af_benchmark/benchmark.py tests/test-read-from-dir.yaml
+        run: python3 tests/test-executors.py
 
-  futures-executor:
+  test-processing:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -54,75 +54,6 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Test futures executor
-        run: python3 af_benchmark/benchmark.py tests/test-futures.yaml
-
-  dask-local-executor:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Test Dask executor (local)
-        run: python3 af_benchmark/benchmark.py tests/test-dask-local.yaml
-
-  explicit-columns:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Test explicit list of columns
-        run: python3 af_benchmark/benchmark.py tests/test-explicit-columns.yaml
-
-  read-by-file:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Test parallelization over files
-        run: python3 af_benchmark/benchmark.py tests/test-read-by-file.yaml
-
-  read-by-column:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Test parallelization over columns
-        run: python3 af_benchmark/benchmark.py tests/test-read-by-column.yaml
-
+      - name: Test processing
+        run: tests/test-processing.py
 
