--- a/tests/config-default.yaml
+++ b/tests/config-default.yaml
@@ -1,10 +1,10 @@
-executor:
-  backend: dask-local
 data-access:
   mode: explicit-files
   files: 
     - tests/data/nano_dimuon.root
+executor:
+  backend: sequential
 processor:
   parallelize_over: files
-  columns: 10
+  columns: 5
   operation: sum
