--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,7 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Test reading from local directory
-        run: pip install -r requirements.txt
-
-      - name: 
+      - name: Test executors
         run: python3 tests/test-executors.py
 
   test-processing:
@@ -55,5 +52,5 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Test processing
-        run: tests/test-processing.py
+        run: python3 tests/test-processing.py
 
