--- a/af_benchmark/example-configs/example-config-dbs-files.yaml
+++ b/af_benchmark/example-configs/example-config-dbs-files.yaml
@@ -1,14 +1,14 @@
-executor:
-  backend: sequential
 data-access:
   mode: dbs-files
-#  xrootdserver: eos.cms.rcac.purdue.edu:1094
+  # xrootdserver: eos.cms.rcac.purdue.edu:1094
+  # xrootdserver: cmsxrootd.hep.wisc.edu:1094
   xrootdserver: cms-xcache.rcac.purdue.edu:1094
-#  xrootdserver: cmsxrootd.hep.wisc.edu:1094
   files:
       - /store/data/Run2016B/SingleMuon/NANOAOD/02Apr2020_ver2-v1/20000/90322FC2-4027-0E47-92E4-22307EC8EAD2.root       
+executor:
+  backend: futures
 processor:
-  parallelize_over: columns
-#  parallelize_over: files
-  columns: 5
-  operation: sum
+  parallelize_over: files
+  collections:
+      - Muon
+  operation: load_into_memory
