run abstract operation per worker (not per column)

--- a/af_benchmark/example-configs/example-config.yaml
+++ b/af_benchmark/example-configs/example-config.yaml
@@ -8,4 +8,6 @@ processor:
   parallelize_over: files
   collections:
       - Muon
-  operation: load_into_memory
+  load_columns_into_memory: True
+  worker_operation_time: 1
+
