--- a/af_benchmark/example-configs/example-config-dbs-datasets.yaml
+++ b/af_benchmark/example-configs/example-config-dbs-datasets.yaml
@@ -10,4 +10,5 @@ processor:
   parallelize_over: files
   collections:
       - Muon
-  operation: load_into_memory
+  load_columns_into_memory: True
+  worker_operation_time: 0
