--- a/notebooks/config_3.2.yaml
+++ b/notebooks/config_3.2.yaml
@@ -13,4 +13,6 @@ data-access:
 processor:
   parallelize_over: columns
   columns: 10
-  operation: load_into_memory
+  load_columns_into_memory: True
+  worker_operation_time: 0
+
