--- a/tests/config-default.yaml
+++ b/tests/config-default.yaml
@@ -8,3 +8,6 @@ processor:
   parallelize_over: files
   columns: 5
   operation: sum
+  load_columns_into_memory: True
+  worker_operation_time: 0
+
