--- a/af_benchmark/example-configs/example-config-Hmm.yaml
+++ b/af_benchmark/example-configs/example-config-Hmm.yaml
@@ -7,33 +7,35 @@ executor:
 processor:
   parallelize_over: files
   columns:
-    - run
-    - luminosityBlock
-    - HLT_IsoMu24
-    - Muon_pt
-    - Muon_eta
-    - Muon_phi
-    - Muon_mass
-    - Muon_charge
-    - Muon_pfRelIso04_all
-    - Muon_mediumId
-    - Muon_ptErr
-    - Electron_pt
-    - Electron_eta
-    - Electron_mvaFall17V2Iso_WP90
-    - Jet_pt
-    - Jet_eta
-    - Jet_phi
-    - Jet_mass
-    - PV_npvsGood
-    - fixedGridRhoFastjetAll
-    # - Pileup_nTrueInt    # MC only
-    # - genWeight          # MC only
-    # - GenPart_*          # MC only
-    # - LHEScaleWeight     # MC only
-    # - LHEPdfWeight       # MC only
-    # - HTXS_Higgs_pt      # Higgs MC only
-    # - HTXS_njets30       # Higgs MC only
+    method: column_list
+    values:
+      - run
+      - luminosityBlock
+      - HLT_IsoMu24
+      - Muon_pt
+      - Muon_eta
+      - Muon_phi
+      - Muon_mass
+      - Muon_charge
+      - Muon_pfRelIso04_all
+      - Muon_mediumId
+      - Muon_ptErr
+      - Electron_pt
+      - Electron_eta
+      - Electron_mvaFall17V2Iso_WP90
+      - Jet_pt
+      - Jet_eta
+      - Jet_phi
+      - Jet_mass
+      - PV_npvsGood
+      - fixedGridRhoFastjetAll
+      # - Pileup_nTrueInt    # MC only
+      # - genWeight          # MC only
+      # - GenPart_*          # MC only
+      # - LHEScaleWeight     # MC only
+      # - LHEPdfWeight       # MC only
+      # - HTXS_Higgs_pt      # Higgs MC only
+      # - HTXS_njets30       # Higgs MC only
   load_columns_into_memory: True
   worker_operation_time: 0
 
