--- a/af_benchmark/example-configs/example-config-dbs-files.yaml
+++ b/af_benchmark/example-configs/example-config-dbs-files.yaml
@@ -9,7 +9,9 @@ executor:
   backend: futures
 processor:
   parallelize_over: files
-  collections:
-      - Muon
+  columns:
+      method: collections
+      values:
+        - Muon
   load_columns_into_memory: True
   worker_operation_time: 0
