--- a/notebooks/config_2.1.yaml
+++ b/notebooks/config_2.1.yaml
@@ -11,6 +11,8 @@ executor:
 
 processor:
   parallelize_over: columns
-  collections: [Muon]
+  columns:
+    method: collections
+    values: [Muon]
   load_columns_into_memory: True
   worker_operation_time: 0
