--- a/tests/config-default.yaml
+++ b/tests/config-default.yaml
@@ -6,7 +6,9 @@ executor:
   backend: sequential
 processor:
   parallelize_over: files
-  columns: 5
+  columns:
+    method: n_columns
+    values: 5
   load_columns_into_memory: True
   worker_operation_time: 0
 
